dev/immich/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      name: immich
  template:
    metadata:
      labels:
        name: immich
    spec:
      securityContext:
        # runAsUser: 1200
        # runAsGroup: 1200
        fsGroup: 1200
        supplementalGroups: [1000]
      containers:
        - name: immich-server
          image: "ghcr.io/immich-app/immich-server:v1.120.1"
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/collections
              name: collections
            - mountPath: /usr/src/app/upload
              name: upload
      volumes:
        - name: collections
          nfs:
            server: <path:gitops:storage#domain_nas>
            path: <path:gitops:storage#nas>/immich/collections
            readOnly: true
        - name: upload
          nfs:
            server: <path:gitops:storage#domain_nas>
            path: <path:gitops:storage#nas>/immich/upload
