dev/immich/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-ingress
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chromium.<path:gitops:ingress#domain>`)
      kind: Rule
      middlewares:
        - name: immich-redirect
      services:
        - name: immich
          port: 2283
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-redirect
spec:
  redirectRegex:
    regex: ^https://chromium.<path:gitops:ingress#domain>/?$
    replacement: https://chromium.<path:gitops:ingress#domain>/search?query=%7B"model"%3A"General"%7D
